fix: removed overflow hidden from collapse component

--- a/src/Components/Collapse/Collapse.module.css
+++ b/src/Components/Collapse/Collapse.module.css
@@ -36,7 +36,6 @@
 }
 
 .line {
-  display: none;
   position: absolute;
   left: 0.9rem;
   top: 1.8rem;
@@ -46,10 +45,6 @@
   --tw-bg-opacity: 1;
   border-color: hsl(var(--b3) / var(--tw-bg-opacity));
   transition: all 0.2s ease-out;
-}
-
-.collapseOpen .line {
-  display: block;
 }
 
 .buttonIcon {
